k8s/odoo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo
      role: service
  template:
    metadata:
      labels:
        app: odoo
        role: service
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: odoo
          image: jliotorresmoreno/odoo:18.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8069
          resources:
            limits:
              cpu: "16"
              memory: "8Gi"
              ephemeral-storage: "4Gi"
            requests:
              cpu: "100m"
              memory: "4Gi"
              ephemeral-storage: "4Gi"
          volumeMounts:
            - name: odoo-data
              mountPath: /var/lib/odoo
            - name: odoo-custom-addons
              mountPath: /opt/odoo/custom_addons
      volumes:
        - name: odoo-data
          persistentVolumeClaim:
            claimName: odoo-data
        - name: odoo-custom-addons
          persistentVolumeClaim:
            claimName: odoo-custom-addons
