k8s/odoo/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: odoo
    role: service
  ports:
    - port: 8069
      targetPort: 8069
