k8s/odoo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo
spec:
  selector:
    app: odoo
    role: service
  ports:
    - name: http
      port: 8069
      targetPort: 8069
  type: ClusterIP
